test/typeCheckTest/fail/test7.ic
//testing illegal class return type
class Animal {
	Cow getCow () {
		return new Cow();
	}
}

class Cow extends Animal {
	Animal getCow () {
		return new Animal();
	}
	
	void main (string [] args) {
	
	}
}